--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
          
     </main> 
          <footer>
-            <p> Site criado por ✮ Samuel jairo</a> ✮ </p>
+            <p> Site criado por ✮ <a href="https://www.instagram.com/_s4muel.jr?igsh=ZjByejZpNnRoaXR2">Samuel jairo</a> ✮ </p>
         </footer>
                
 </body>
